// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styling build should create valid app 1`] = `
SCRIPTS: [
  "/styling/runtime.js",
  "/styling/2.js",
  "/styling/main.js",
]
CSS: [
  "/styling/main-464f06daf5715e3d7e00.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div>
        <div>
          Render type:
          Initial
        </div>
        <div class="ss2a6DC">
          <span
            class="external"
            data-automation-external="true"
          >
            This should be invisible
          </span>
          <div
            class="x5z4AMj"
            data-automation-less="true"
          >
          </div>
          <div
            class="qiwkl41 qiwkl40"
            data-automation-vanilla="true"
          >
          </div>
        </div>
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
       <div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
         <div class="ss2a6DC">
           <span

`;

exports[`styling build should generate the expected files 1`] = `
{
  "2.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "components/styles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  'nested': string;
  'root': string;
}
export const cssExports: CssExports;
export default cssExports;
",
  "index.html": SCRIPTS: [
    "/styling/runtime.js",
    "/styling/2.js",
    "/styling/main.js",
  ]
CSS: [
    "/styling/main-464f06daf5715e3d7e00.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div>
        <div>
          Render type:
          Initial
        </div>
        <div class="ss2a6DC">
          <span
            class="external"
            data-automation-external="true"
          >
            This should be invisible
          </span>
          <div
            class="x5z4AMj"
            data-automation-less="true"
          >
          </div>
          <div
            class="qiwkl41 qiwkl40"
            data-automation-vanilla="true"
          >
          </div>
        </div>
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
  </body>
</html>,
  "main-464f06daf5715e3d7e00.css": .external {
  display: none;
  font-size: 9px;
}
.qiwkl40 {
  border: 10px solid red;
}
.qiwkl41 {
  background: blue;
  font-size: 64px;
  height: 100px;
  width: 100px;
}
.ss2a6DC {
  display: flex;
}
.ss2a6DC .x5z4AMj {
  font-size: 32px;
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`styling start should start a development server 1`] = `
SCRIPTS: [
  "/runtime.js",
  "/2.js",
  "/main.js",
]
CSS: [
  "/main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div>
        <div>
          Render type:
          Initial
        </div>
        <div class="styles__root___ss2a6DC">
          <span
            class="external"
            data-automation-external="true"
          >
            This should be invisible
          </span>
          <div
            class="styles__nested___x5z4AMj"
            data-automation-less="true"
          >
          </div>
          <div
            class="BlueBlock_root__qiwkl41 BlueBlock_border__qiwkl40"
            data-automation-vanilla="true"
          >
          </div>
        </div>
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
       <div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
         <div class="styles__root___ss2a6DC">
           <span

`;
